<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.mike.phototweak.InfoScreenFragment">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="1"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="8dp">

        <TextView
            android:id="@+id/textView11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:text="Controls"
            android:textSize="36sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:padding="5dp"
            app:srcCompat="@drawable/ic_wb_sunny_black_48dp" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:text="@string/app_level_description"
            android:textSize="24sp" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/colorPrimary"
            android:padding="5dp"
            app:srcCompat="@drawable/ic_hourglass_full_black_48dp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorPrimary"
            android:padding="10dp"
            android:text="@string/app_fade_description"
            android:textSize="24sp" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:padding="5dp"
            app:srcCompat="@drawable/ic_settings_black_48dp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:text="@string/app_settings_description"
            android:textSize="24sp" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:padding="5dp"
            app:srcCompat="@drawable/ic_info_black_48dp" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:text="@string/app_info_description"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:gravity="center"
            android:text="@string/app_author" />

        <!--<TableLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent"-->
        <!--android:gravity="center_horizontal"-->
        <!--android:padding="@dimen/activity_vertical_margin">-->

        <!--<TableRow-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent"-->
        <!--android:padding="10dp">-->

        <!--</TableRow>-->

        <!--<TableRow-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent"-->
        <!--android:padding="10dp">-->

        <!--<Button-->
        <!--android:id="@+id/button_powerlevel"-->
        <!--android:layout_width="200dp"-->
        <!--android:layout_height="100dp"-->
        <!--android:layout_weight="0.2"-->
        <!--android:allowUndo="false"-->
        <!--android:text="Power Level" />-->

        <!--<TextView-->
        <!--android:id="@+id/textView"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_weight=".8"-->
        <!--android:padding="10dp"-->
        <!--android:text="@string/app_description_power_level"-->
        <!--android:textSize="12sp"-->
        <!--tools:textStyle="italic" />-->
        <!--</TableRow>-->

        <!--<TableRow-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent">-->

        <!--<Button-->
        <!--android:id="@+id/button_faderate"-->
        <!--android:layout_width="200dp"-->
        <!--android:layout_height="100dp"-->
        <!--android:layout_weight=".2"-->
        <!--android:text="Fade Rate" />-->

        <!--<TextView-->
        <!--android:id="@+id/textView6"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_weight=".8"-->
        <!--android:text="@string/app_description_fade_rate"-->
        <!--android:textSize="12sp" />-->
        <!--</TableRow>-->

        <!--<TableRow-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent" />-->
        <!--</TableLayout>-->
    </LinearLayout>

</FrameLayout>
